vetores04.txt,
Main.java:1: error: class, interface, or enum expected
mport java.util.Scanner;
^
1 error


** Process exited - Return Code: 1 **